Optimized on-site SEO and added doctor images

--- a/appointment.html
+++ b/appointment.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-    <title>Appointment Confirmation</title>
+    <title>Online Appointment Confirmation</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="appointStyles.css">
-    <link rel="icon" href="images/krishna_logo.jpg">
+    <link rel="icon" href="images/krishna_logo-min.jpg">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="hospLogo">
-            <img src="images/krishna_logo.jpg" alt="Krishna Hospital Logo">
+            <img src="images/krishna_logo-min.jpg" alt="Krishna Hospital Logo">
         </div>
         <div class="hospDes"> Krishna Women's Hospital Appointments</div>
         <div class="headInfo">
