--- a/services.html
+++ b/services.html
@@ -5,9 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Krishna Services</title>
+    <title>Krishna Women's Hospital - Services</title>
+    <meta name="description" content="From Routine Gynec Consultation and Infertility treatments to Gynec surgical procedures like Cesarean Section, Laproscopy, Hystrectomy, Colposcopy, Open-Vaginal Surgery, etc., 
+    are performed at Krishna Women's Hospital.">
+    <meta name="keywords" content="Krishna Women Hospital, Krishna Womens Hospital, Krishna Women's Hospital, Krishna Gynec Hospital, gynec hospitals in Ahmedabad, gynec hospitals in Odhav, 
+        gynec hospitals in Vastral, best women hospital, best gynec hospitals in Odhav, best gynec hospital in Ahmedabad, infertility treatment in Ahmedabad, 
+        infertility treatment in Odhav, baby vaccination in Ahmedabad, baby vaccination in Odhav, Women hospitals in Ahmedabad, women hospitals, women hopitals in ahmedabad, sonograpy,
+         3D-4D sonography, baby delivery, hospitals, anti natural clinic, endoscopy, laparoscopy, endoscopy center, laparoscopy center, Colposcopy, gynec cancer detection in Ahmedabad,
+          best gynec sonography in Odhav, best gynec sonography in Ahmedabad">
     <script src="https://kit.fontawesome.com/cc0efb1716.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="images/krishna_logo.jpg">
+    <link rel="icon" href="images/krishna_logo-min.jpg">
     <link rel="stylesheet" href="servicesStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -17,7 +24,7 @@
 <body>
     <header>
         <div class="hospLogo">
-            <img src="images/krishna_logo.jpg" alt="Krishna Hospital Logo">
+            <img src="images/krishna_logo-min.jpg" alt="Krishna Hospital Logo">
         </div>
         <div class="hospDes"> Krishna Hospital Services</div>
         <div class="headInfo">
@@ -27,7 +34,7 @@
             <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM
                 and 5PM - 7PM
             </div>
-            <div class="location"><img src="images/location_icon.jpg"> <a href="#googleMaps">Click for Location</a>
+            <div class="location"><img src="images/location_icon-min.jpg"> <a href="#googleMaps">Click for Location</a>
             </div>
         </div>
     </header>
@@ -67,7 +74,7 @@
                 </div>
             </div>
             <div class="introImg">
-                <img src="images/reception.JPG" alt="facilites">
+                <img src="images/reception-min.JPG" alt="Krishna Hospital Reception">
             </div>
         </div>
     </section>
@@ -103,12 +110,12 @@
                     </div>
                 </div>
                 <div class="itemImg oddImg">
-                    <img src="images/consultation.jpg" alt="">
+                    <img src="images/consultation-min.jpg" alt="Routine Consultation">
                 </div>
             </div>
             <div class="item">
                 <div class="itemImg">
-                    <img src="images/high_risk_pregnancy.jpg" alt="">
+                    <img src="images/high_risk_pregnancy-min.jpg" alt="High-Risk Pregnancy">
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
@@ -127,12 +134,12 @@
                     </div>
                 </div>
                 <div class="itemImg oddImg">
-                    <img src="images/infertility.jpg" alt="">
+                    <img src="images/infertility-min.jpg" alt="Infertility Treatments">
                 </div>
             </div>
             <div class="item">
                 <div class="itemImg">
-                    <img src="images/sonography.jpg" alt="">
+                    <img src="images/sonography-min.jpg" alt="3D and 4D Sonography">
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
@@ -151,12 +158,12 @@
                     </div>
                 </div>
                 <div class="itemImg oddImg">
-                    <img src="images/laproscopy.jpg" alt="">
+                    <img src="images/laproscopy-min.jpg" alt="Laproscopy Surgery">
                 </div>
             </div>
             <div class="item">
                 <div class="itemImg">
-                    <img src="images/gynec_operative_proc.jpg" alt="">
+                    <img src="images/gynec_operative_proc-min.jpg" alt="Hystrectomy, Vaginal Surgeries">
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
@@ -175,12 +182,12 @@
                     </div>
                 </div>
                 <div class="itemImg oddImg">
-                    <img src="images/gynec_cancer.jpg" alt="Gynec Cancer">
+                    <img src="images/gynec_cancer-min.jpg" alt="Gynec Cancer">
                 </div>
             </div>
             <div class="item">
                 <div class="itemImg">
-                    <img src="images/new_born_vaccination.jpg" alt="New Born Vaccinations">
+                    <img src="images/new_born_vaccination-min.jpg" alt="New Born Vaccinations">
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
@@ -217,7 +224,7 @@
                 </div>
             </div>
             <div class="roomImg">
-                <img src="images/deluxe_room.jpg" alt="">
+                <img src="images/deluxe_room-min.jpg" alt="Krishna Hospital Deluxe Rooms">
             </div>
         </div>
         <div class="roomBlock">
@@ -231,7 +238,7 @@
                 </div>
             </div>
             <div class="roomImg">
-                <img src="images/room_categ.jpg" alt="">
+                <img src="images/room_categ-min.jpg" alt="Krishna Hospital Special Rooms">
             </div>
         </div>
         <div class="roomBlock">
@@ -240,12 +247,12 @@
                     <h1>Semi-Special Rooms</h1>
                 </div>
                 <div class="roomDes">
-                    <p>Semi-Special Rooms are the third class of rooms at Krishna. These non-air conditioned rooms offer extremely affordable accommodation with limited facilites. Patient relatives accommodation is available within the room. Other facilities might be made available on additional charges.
+                    <p>Semi-Special Rooms are the third class of rooms at Krishna. These non-air conditioned rooms offer extremely affordable stay with limited facilites. Patient relatives accommodation is available within the room. Other facilities might be made available on additional charges.
                     </p>
                 </div>
             </div>
             <div class="roomImg">
-                <img src="images/semi_special.jpg" alt="">
+                <img src="images/semi_special-min.jpg" alt="Krishna Hospital Semi-Special Rooms">
             </div>
         </div>
         <div class="roomBlock">
@@ -259,7 +266,7 @@
                 </div>
             </div>
             <div class="roomImg">
-                <img src="images/general_ward.jpg" alt="">
+                <img src="images/general_ward-min.jpg" alt="Krishna Hospital General Ward">
             </div>
         </div>
 
@@ -284,25 +291,25 @@
             <div class="slider gallerySlider">
                 <div class="slider-items">
                     <div class="itemslider active">
-                        <img src="images/gallery.jpg" />
+                        <img src="images/gallery-min.jpg" alt="Krishna Hospital Waiting Area"/>
                     </div>
                     <div class="itemslider">
-                        <img src="images/reception.JPG" />
+                        <img src="images/reception-min.JPG" alt="Krishna Hospital Reception" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/med_pro.jpg" />
+                        <img src="images/med_pro-min.jpg" alt="Krishna Hospital Gynec Sonography" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/consultation.jpg" />
+                        <img src="images/consultation-min.jpg" alt="Krishna Hospital Gynec Consultation" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/all_staff.jpg" />
+                        <img src="images/all_staff-min.jpg" alt="Krishna Hospital Staff" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/ot_theatre.jpg" />
+                        <img src="images/ot_theatre-min.jpg" alt="Krishna Hospital Operation Theatre" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/waiting_area_2.jpg" />
+                        <img src="images/waiting_area_2-min.jpg" alt="Krishna Hospital Waiting Area" />
                     </div>
 
                 </div>
@@ -335,7 +342,7 @@
                 </p>
                 <br>
                 <p><img class="phone" src="images/phone_icon-removebg-preview.png"> &nbsp +91 9408218912 / +91 7874775646 <br>
-                    <img class="mail" src="images/mail_icon.jpg"> krishna.women.hosp@gmail.com
+                    <img class="mail" src="images/mail_icon-min.jpg"> krishna.women.hosp@gmail.com
                 </p>
             </div>
             <div class="disclaimer">
