added dr nirav vyas image in the index page

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </div>
             <div class="visitDocs">
                 <div class="visitDocsImg">
-                    <img src="images/mock_doctor_logo.jpg" alt="Dr. Nirav Vyas">
+                    <img src="images/nirav_vyas.jpeg" alt="Dr. Nirav Vyas">
                 </div>
                 <div class="visitDocsDes">
                     <h1>Dr. Nirav Vyas</h1>
