Fixed dr image alignment issues and navbar glitch in mobile view

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
             <div class="visitDocs">
                 <div class="visitDocsImg">
-                    <img src="images/girish_patel-min.jpeg" alt="Dr. Girish Patel">
+                    <img src="images/girish_patel_aligned-min.jpeg" alt="Dr. Girish Patel">
                 </div>
                 <div class="visitDocsDes">
                     <h1>Dr. Girish Patel</h1>
