fixed bugs on navbar click in mobile view

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <nav class="navBar">
             <div class="openMenu"><i class="fa fa-bars"></i></div>
             <ul class="mainMenu">
-                <li class="button"><a href="#appointment">Make Appointment</button></li>
-                <li class="link"><a href="#home">Home</a></li>
-                <li class="link"><a href="#about">About Krishna</a></li>
-                <li class="link"><a href="#services">Services</a></li>
-                <li class="link"><a href="#team">Doctors&Staff</a></li>
-                <li class="link"><a href="#contact">Contact</a></li>
+                <li class="button"><a href="#appointment" class="navbar-links">Make Appointment</a></li>
+                <li class="link"><a href="#home" id="home-link">Home</a></li>
+                <li class="link"><a href="#about" id="about-link">About Krishna</a></li>
+                <li class="link"><a href="#services" id="services-link">Services</a></li>
+                <li class="link"><a href="#team" id="teams-link">Doctors&Staff</a></li>
+                <li class="link"><a href="#contact" id="contact-link">Contact</a></li>
                 <div class="devs">Developer Contacts</div>
                 <div class="closeMenu"><i class="fa fa-times"></i></div>
                 <span class="icons">
@@ -464,9 +464,9 @@
             <a href="#top">^</a>
         </div>
     </section>
-    <script src="./toggle.js"></script>
-    <script src="./copytext.js"></script>
-    <script src="./validation.js"></script>
+    <script defer src="./toggle.js"></script>
+    <script defer src="./copytext.js"></script>
+    <script defer src="./validation.js"></script>
 </body>
 
 </html>
