--- a/services.html
+++ b/services.html
@@ -42,12 +42,12 @@
         <nav class="navBar">
             <div class="openMenu"><i class="fa fa-bars"></i></div>
             <ul class="mainMenu">
-                <li class="button"><a href="index.html#appointment">Make Appointment</button></li>
+                <li class="button"><a href="index.html#appointment">Make Appointment</a></li>
                 <li class="link"><a href="index.html#services">Home Page</a></li>
-                <li class="link"><a href="#medpro">Medical Procedures</a></li>
-                <li class="link"><a href="#rooms">Room Categories</a></li>
-                <li class="link"><a href="#gallery">Gallery</a></li>
-                <li class="link"><a href="#contact">Contact</a></li>
+                <li class="link"><a href="#medpro" id="medpro-link">Medical Procedures</a></li>
+                <li class="link"><a href="#rooms" id="rooms-link">Room Categories</a></li>
+                <li class="link"><a href="#gallery" id="gallery-link">Gallery</a></li>
+                <li class="link"><a href="#contact" id="contact-link">Contact</a></li>
                 <div class="devs">Developer Contacts</div>
                 <div class="closeMenu"><i class="fa fa-times"></i></div>
                 <span class="icons">
@@ -369,7 +369,7 @@
             <a href="#top">^</a>
         </div>
     </section>
-    <script src="./toggle.js"></script>
+    <script src="./toggleServices.js"></script>
     <script src="./copytext.js"></script>
     <script src="./slider.js"></script>
 
