fixes: spacings and typos

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     </li>
                     <li class="discPoints">ONLINE appointments will get the <b>HIGHEST PREFERENCE</b> and will be able
                         to <b>SKIP THE WAITING LINE</b>.</li>
-                    <li class="discPoints">Fees are to be payed at the Reception Desk <b>AFTER</b> the appointment has
+                    <li class="discPoints">Fees are to be paid at the Reception Desk <b>AFTER</b> the appointment has
                         been completed.</li>
                     <li class="discPoints">Only appointment booking is <b>ONLINE</b>, consulation with the doctor will
                         be <b>OFFLINE</b> at Krishna Hospital.</li>
@@ -453,7 +453,7 @@
             </div>
         </div>
         <div class="footer">
-            <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
+            <p class="copyright">Copyright &copy; 2021 Krishna Women's Hospital</p>
             <p class="developers">Website Developer's <b>Linked</b> <i class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
                 <a href="https://www.linkedin.com/in/neelav-bhatiya-589170216/" target="_blank">Neelav Bhatiya</a>
